<resources>
    <string name="app_name">MyDigimind</string>
    <string name="title_home">My Board</string>
    <string name="title_dashboard">New Reminder</string>
    <string name="title_notifications">Notifications</string>
    <string name="what_do_you_want_to_remember_to_do">What do you want to remember to do?</string>
    <string name="take_my_pill">Take my pill</string>
    <string name="when_do_you_want_to_do_it">When do you want to do it?</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="at_what_time">At what time?</string>
    <string name="set_time">SET TIME</string>
    <string name="time">HOUR</string>
    <string name="add">ADD</string>
    <string name="hint_title">MyDigimind</string>
    <string name="new_reminder">New reminder added</string>
    <string name="ok_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="title">NOTICE</string>
    <string name="msg">Do you wish to delete this reminder?</string>
    <string name="msg_deleted">The reminder has been deleted</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirm_pass">Confirmar Contraseña</string>
    <string name="forgot_pass">¿Olvidaste tu ontraseña?</string>


</resources>