<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/fondo">

    <TextView
        android:id="@+id/txtNombreRecordatorio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/take_my_pill"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textDiasRecordatorio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Friday"
        android:gravity="center"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/textTiempoRecordatorio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/set_time"
        android:gravity="center"
        android:textSize="20sp"/>

</LinearLayout>